--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -3925,6 +3925,32 @@ footer .soc a:hover{
   position: relative;
   top: 4px;
 }
+
+.show-more-item span:nth-child(3){
+  display: none;
+}
+.show-more-item span{
+  margin-right: 5px;
+  display: inline-block;
+}
+.is-active.show-more-item {
+  span:nth-child(3){
+    display: inline-block;
+  }
+  span:nth-child(2){
+    display: none;
+  }
+}
+
+.event .btn-wrap.btn-mob{
+  display: none;
+  width: 100%;
+  order: 3;
+}
+
+.number-block .bg .img-3{
+  display: none!important;
+}
 /*-----------------------END-PAGE-ADVENTURES------------------------*/
 
 @media (min-width: 992px){
@@ -3937,3 +3963,454 @@ footer .soc a:hover{
     }
   }
 }
+
+/*------------------------PAGE-SOCIAL-ACTIVITIES------------------------*/
+.title-img{
+  position: relative;
+  margin-top: -70px;
+  padding-top: 70px;
+  padding-bottom: 90px;
+  .bg-mob{
+    display: none;
+  }
+  .bg{
+    .img-1{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: auto;
+    }
+    .img-2{
+      position: absolute;
+      top: 75px;
+      z-index: 2;
+      left: 0;
+      width: 100%;
+      height: auto;
+    }
+    .img-3{
+      position: absolute;
+      top: 125px;
+      left: 0;
+      width: 100%;
+      height: auto;
+      z-index: 3;
+    }
+  }
+
+  .content-width{
+    z-index: 5;
+    position: relative;
+  }
+  .lang{
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+    li + li{
+      margin-left: 25px;
+
+    }
+    li{
+      a{
+        &:hover{
+          opacity: 0.7;
+        }
+      }
+    }
+  }
+  h1{
+    font-size: 56px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 106%;
+    text-align: center;
+    margin-bottom: 30px;
+    margin-top: 95px;
+  }
+  p{
+    text-align: center;
+    margin: 0 10px 25px;
+  }
+  .content{
+    width: 960px;
+    margin: auto;
+  }
+}
+
+.blog{
+  .h2{
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 106%;
+    text-align: center;
+  }
+  .list-info{
+    display: flex;
+    flex-wrap: wrap;
+    margin: -3px 0 22px;
+    li{
+      border-radius: 90px;
+      border: 1px solid #FF7900;
+      background: #FEF7F3;
+      padding: 0 20px;
+      margin: 0 5px 8px 0;
+      font-size: 16px;
+      min-height: 38px;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+    }
+    li:last-child{
+      margin: 0;
+    }
+  }
+}
+
+.blog-social{
+  padding-bottom: 50px;
+  .bottom{
+    margin-top: 25px;
+    a:hover{
+      color: #000;
+      img{
+        filter: invert(60%) sepia(56%) saturate(563%) hue-rotate(359deg) brightness(119%) contrast(106%);
+      }
+    }
+  }
+}
+
+.donate{
+  padding: 85px 0 100px;
+  .top{
+    width: 640px;
+    margin: 0 auto 20px;
+    text-align: center;
+    p{
+      text-align: center;
+    }
+    p.info{
+      height: 44px;
+      background: #FF7900;
+      text-align: center;
+      border: 1px solid #FF7900;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 44px;
+      color: #fff;
+      padding: 0 20px;
+      border-radius: 22px;
+      display: inline-block;
+      margin:20px auto 0 ;
+    }
+  }
+  .h2{
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 106%;
+    text-align: center;
+    max-width: 89%;
+    margin: 0 auto 20px;
+  }
+
+  .content{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 30px 0 30px;
+    figure{
+      width: 42%;
+      padding: 45px 0 0 15px;
+      img{
+        width: 100%;
+      }
+    }
+  }
+  .left{
+    width: 29%;
+  }
+  .right{
+    width: 29%;
+  }
+  .item{
+    display: flex;
+    justify-content: space-between;
+    .icon-wrap{
+      width: 60px;
+    }
+    .text{
+      width: calc(100% - 75px);
+      position: relative;
+      top: -4px;
+      p{
+        color: #000;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 150%;
+        margin: 0 0 4px;
+        span{
+          display: block;
+          white-space: nowrap;
+        }
+      }
+      a{
+        background: transparent;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 150%;
+        color: #FF7900;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        width: -webkit-fit-content;
+        width: -moz-fit-content;
+        width: fit-content;
+        margin-bottom: 4px;
+        img{
+          margin-right: 10px;
+          position: relative;
+          top: -1px;
+        }
+        &:hover{
+          color: #000;
+          img{
+            filter: invert(60%) sepia(56%) saturate(563%) hue-rotate(359deg) brightness(119%) contrast(106%);
+          }
+        }
+      }
+    }
+    .line-dot{
+      position: relative;
+    }
+  }
+  .item-2{
+    .line-dot{
+      margin-top: -60px;
+    }
+  }
+  .info-block{
+    border-radius: 10px;
+    background:#F9E5D7;
+    border: 1px solid $orange;
+    padding: 10px 10px 10px 15px;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    position: relative;
+    left: -25px;
+    margin-right: 15px;
+    margin-bottom: 73px;
+    &:before{
+      width: 10px;
+      height: 10px;
+      transform: rotate(45deg);
+      content: "";
+      background:#F9E5D7;
+      border: 1px solid $orange;
+      display: inline-block;
+      position: absolute;
+      top: 50%;
+      margin-top: -6px;
+      left: -6px;
+      border-top: 0;
+      border-right: 0;
+    }
+    b{
+      color: $orange;
+      font-weight: 600;
+    }
+  }
+  .item-3{
+    margin-left: 15px;
+    .line-dot{
+      margin-top: -55px;
+      margin-left: -115px;
+    }
+  }
+  .btn-wrap{
+    text-align: center;
+    margin: 0;
+    a{
+      color: #000;
+      text-align: center;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 150%;
+      text-decoration-line: underline;
+      &:hover{
+        color: $orange;
+      }
+    }
+  }
+}
+
+.popup-details{
+  width: 300px;
+  padding: 50px 20px 20px;
+  p{
+    font-size: 14px;
+    margin-bottom: 3px;
+  }
+}
+
+.oon{
+  padding: 18px 0 25px;
+  .h2{
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 106%;
+    text-align: center;
+    max-width:100%;
+    margin: 0 auto 30px;
+    width: 780px;
+  }
+
+  ul{
+    li{
+      border-radius: 10px;
+      background: #F9E5D7;
+      margin-bottom: 40px;
+      padding: 38px 62px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      figure{
+        width: 200px;
+      }
+      .text{
+        width: calc(100% - 240px);
+      }
+      .h3{
+        font-size: 26px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 112%;
+        margin-bottom: 11px;
+      }
+      p{
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 150%;
+        a{
+          color: #FF7900;
+          font-size: 18px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 150%; /* 27px */
+          text-decoration-line: underline;
+          &:hover{
+            color: #505A14;
+          }
+        }
+      }
+    }
+  }
+}
+
+.our-partners{
+  padding: 43px 0 25px;
+  .h2{
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 106%;
+    text-align: center;
+    max-width:100%;
+    margin: 0 auto 25px;
+  }
+  ul{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 57px 30px;
+    li{
+      height: 105px;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+}
+
+.add-social{
+  padding: 87px 53px;
+  .list-tel{
+    li{
+      margin-bottom: 14px;
+      a{
+        display: flex;
+        align-items: center;
+        width: fit-content;
+        color:#FF7900;
+        font-size: 26px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 112%;
+        img{
+          margin-right: 10px;
+        }
+        &:hover{
+          color: #fff;
+
+        }
+      }
+    }
+    li:last-child{
+      margin-bottom: 0;
+    }
+  }
+  .h3{
+    margin-bottom: 55px;
+  }
+  .content{
+    padding: 85px 53px 60px;
+  }
+  .info-block{
+    width: 48%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding-bottom: 10px;
+    p{
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 150%;
+      margin-top: 0;
+      color: #fff;
+    }
+  }
+}
+.donate .item .text a{
+  position: relative;
+  z-index: 3;
+}
+
+.our-partners ul li img{
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.title-img .content figure{
+  width: 100%;
+  img{
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+  }
+}
+/*-----------------------END-PAGE-SOCIAL-ACTIVITIES------------------------*/
