--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -4413,4 +4413,247 @@ footer .soc a:hover{
     border-radius: 10px;
   }
 }
+
+.info-show {
+  position: absolute;
+  top: 200px;
+  left: 50%;
+  z-index: 999999;
+  -webkit-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
+  display: inline-block;
+  -webkit-transition: all .4s ease;
+  transition: all .4s ease;
+  border-radius: 6px;
+  background: rgba(123, 147, 255, 0.9);
+  color: #FFF !important;
+  text-align: center;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%;
+  padding: 12px 17px;
+  white-space: nowrap; }
 /*-----------------------END-PAGE-SOCIAL-ACTIVITIES------------------------*/
+/*------------------------PAGE-EVENTS------------------------*/
+.page-default header .top-line .content-width:after {
+  bottom: 0;
+  top: 0;
+}
+.page-default header .top-line .content-width{
+  padding: 25px 0 25px;
+}
+.page-default header .top-line .logo-wrap{
+  left: -18px;
+}
+
+header .top-menu > ul > li + li {
+  margin-left: 36px;
+}
+
+.page-default header .top-menu{
+  padding-top: 0;
+  top: -3px;
+  left: -7px;
+}
+.events-block{
+  padding: 0 0 120px!important;
+  margin: 0!important;
+  background: #fff!important;
+  .bg-mob{
+    display: none;
+    .img-1{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 1;
+    }
+    .img-2{
+      position: absolute;
+      top: 40px;
+      left: 0;
+      width: 100%;
+      z-index: 2;
+    }
+    .img-3{
+      position: absolute;
+      top: 80px;
+      left: 0;
+      width: 100%;
+      z-index: 3;
+    }
+  }
+  .bg{
+    top: -65px;
+    .img-1{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 1;
+    }
+
+  }
+
+  .content-width{
+    position: relative;
+    z-index: 10;
+    .h2{
+      margin-bottom: 45px;
+    }
+  }
+  .breadcrumb {
+    margin-bottom: 57px;
+  }
+  .select-wrap{
+    margin-bottom: 61px;
+    .wrap{
+      overflow-x: auto;
+    }
+    ul{
+      display: flex;
+      justify-content: center;
+      min-width: fit-content;
+      padding-bottom: 20px;
+      li{
+        margin-right: 21px;
+        a{
+          text-align: center;
+          cursor: pointer;
+          border: 1px solid #ff7900;
+          font-style: normal;
+          font-weight: 500;
+          padding: 0 25px;
+          display: inline-block;
+          background: #fef7f3;
+          -webkit-transition: all 0.4s ease;
+          transition: all 0.4s ease;
+          color: #000;
+          font-size: 18px;
+          height: 54px;
+          line-height: 52px;
+          border-radius: 30px;
+          white-space: nowrap;
+          &:hover{
+            background: #ff7900;
+            color: #fff;
+          }
+        }
+      }
+      .is-active{
+        a{
+          background: #ff7900;
+          color: #fff;
+        }
+      }
+
+    }
+  }
+  .sub-title-wrap{
+    margin-bottom: 40px;
+    p{
+      font-size: 26px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 112%;
+      color: #000;
+    }
+  }
+  .tab-item .item + .item{
+    margin-top: 40px!important;
+  }
+  .tab-item + .sub-title-wrap{
+    margin-top: 123px;
+  }
+  .bottom{
+    margin-top: 83px!important;
+    .btn-big{
+      height: 82px;
+      line-height: 82px;
+      border-radius: 50px;
+    }
+  }
+}
+
+.form-default{
+  .input-wrap-check-more{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    p{
+      font-size: 18px;
+      position: relative;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 150%;
+      color: #000;
+      letter-spacing: -0.3px;
+      display: block;
+      margin-bottom: 30px;
+    }
+    .wrap{
+      width: 100%;
+      margin-bottom: 25px;
+      position: relative;
+      label{
+        font-size: 18px;
+        position: relative;
+        padding-left: 30px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 150%;
+        color: #000;
+        letter-spacing: -0.3px;
+        display: block;
+        &:before{
+          position: absolute;
+          top: 50%;
+          margin-top: -11px;
+          left: 0;
+          width: 20px;
+          height: 20px;
+          border-radius: 100%;
+          border: 1px solid #787878;
+          content: '';
+          -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+        }
+      }
+      input{
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        cursor: pointer;
+        opacity: 0;
+        z-index: 2;
+      }
+      input:checked + label{
+        &:after{
+          position: absolute;
+          top: 8px;
+          left: 5px;
+          width: 10px;
+          height: 10px;
+          content: '';
+          border-radius: 100%;
+          background: #FF7900;
+        }
+        &:before{
+          border: 2px solid #FF7900;
+        }
+      }
+    }
+  }
+}
+
+.events-block .select-wrap .wrap{
+  padding-left: calc((100vw - 1160px)/2);
+  margin-left: calc((-100vw + 1160px)/2);
+  padding-right: 50px;
+  width: 100vw;
+  min-width: 100vw;
+}
+/*-----------------------END-PAGE-EVENTS------------------------*/
