--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -253,6 +253,16 @@ $green: #2B3D24;
   .page-default header .top-menu{
     left: 0;
   }
+  .events-block .select-wrap ul{
+    justify-content: flex-start;
+  }
+  .events-block .select-wrap .wrap{
+    padding-left: calc((100vw - 1160px)/2);
+    margin-left: calc((-100vw + 1160px)/2);
+    padding-right: 50px;
+    width: 100vw;
+    min-width: 100vw;
+  }
   .events-block .select-wrap .wrap{
     padding-left: calc((100vw - 960px)/2);
     margin-left: calc((-100vw + 960px)/2);
